<?xml version="1.0"?>

<package format="2">
  <name>quadrotor_description</name>
  <version>0.1.0</version>
  <description>
    The URDF file for a quadrotor. 
    Adapted from Daniel Mellinger, Nathan Michael, Vijay Kumar, 
    "Trajectory Generation and Control for Precise Aggressive Maneuvers
    with Quadrotors"
  </description>
  
  <author email="depardo@ethz.ch">Diego Pardo.</author>
  <maintainer email="alexander.w.winkler@gmail.com">Alexander W. Winkler</maintainer>
  <license>BSD</license>
  
  <url type="website">http://github.com/leggedrobotics/xpp</url>
  <url type="bugtracker">http://github.com/leggedrobotics/xpp/issues</url>
  
  <buildtool_depend>catkin</buildtool_depend>
</package>