<?xml version="1.0"?>

<package format="2">
  <name>xpp_quadrotor</name>
  <version>1.0.10</version>
  <description>
    The URDF file for a quadrotor to be used with the xpp packages and a 
    simple rviz publisher of quadrotor tfs.
     
    Adapted from Daniel Mellinger, Nathan Michael, Vijay Kumar, 
    "Trajectory Generation and Control for Precise Aggressive Maneuvers
    with Quadrotors".
  </description>
  
  <author email="depardo@ethz.ch">Diego Pardo.</author>
  <author>Alexander W. Winkler</author>
  <maintainer email="alexander.w.winkler@gmail.com">Alexander W. Winkler</maintainer>
  <license>BSD</license>
  
  <url type="website">http://github.com/leggedrobotics/xpp</url>
  <url type="bugtracker">http://github.com/leggedrobotics/xpp/issues</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>xacro</depend>
  <depend>roscpp</depend>
  <depend>xpp_vis</depend>
</package>