<?xml version="1.0"?>

<package format="2">
  <name>hyqb_description</name>
  <version>0.1.0</version>
  <description>
    A minimal URDF file for HyQ from the Italian Institute of Technology (IIT) 
    extracted from https://github.com/iit-DLSLab/hyq-description.
    See also https://www.iit.it/research/lines/dynamic-legged-systems.
  </description>
  
  <author email="ioannis@robots.ox.ac.uk">Ioannis Havoutis</author>
  <author email="carlos.mastalli@iit.it">Carlos Mastalli</author>
  <maintainer email="alexander.w.winkler@gmail.com">Alexander W. Winkler</maintainer>
  <license>BSD</license>
  
  <url type="website">http://github.com/leggedrobotics/xpp</url>
  <url type="bugtracker">http://github.com/leggedrobotics/xpp/issues</url>
  
  <buildtool_depend>catkin</buildtool_depend>
</package>