<?xml version="1.0"?>

<package format="2">
  <name>monoped_description</name>
  <version>0.1.0</version>
  <description>
    The URDF file for a one-legged hopper with one HyQ leg.
  </description>
  
  <author email="depardo@ethz.ch">Diego Pardo.</author>
  <author email="alexander.w.winkler@gmail.com">Alexander W. Winkler</author>
  <maintainer email="alexander.w.winkler@gmail.com">Alexander W. Winkler</maintainer>
  <license>BSD</license>
  
  <url type="website">http://github.com/leggedrobotics/xpp</url>
  <url type="bugtracker">http://github.com/leggedrobotics/xpp/issues</url>
  
  <buildtool_depend>catkin</buildtool_depend>
</package>