<?xml version="1.0"?>

<package format="2">
  <name>xpp_vis_hyq</name>
  <version>1.0.0</version>
  <description>
    HyQ-robot specific functions for visualization in the  XPP Motion Framework.
  </description>
  
  <author email="alexander.w.winkler@gmail.com">Alexander W. Winkler</author>
  <maintainer email="alexander.w.winkler@gmail.com">Alexander W. Winkler</maintainer>
  <license>BSD</license>
  
  <url type="website">http://github.com/leggedrobotics/xpp</url>
  <url type="bugtracker">http://github.com/leggedrobotics/xpp/issues</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>xpp_vis</depend>
</package>